# fastapi-zero

./: .coverage  README.md  pyproject.toml
src/: app.py
tests/: test_app.py
